<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/ic_menu_add" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help" />

</menu>
